...
        self.view.layer.insertSublayer(lineShape1, at: 1)
        
        //完成按鈕
        let btnCatch = UIButton(frame: CGRect(x: 0, y: 0, width: 100, height: 40))
        btnCatch.center.x = view.center.x
        btnCatch.center.y = HEIGHT - 80
        btnCatch.setTitle("Done", for: .normal)
        btnCatch.addTarget(self, action: #selector(onclickDone), for: .touchUpInside)
        view.addSubview(btnCatch)
    }
    @objc func onclickDone(){
        self.delegate?.getColor(color: colorDone!)
        self.dismiss(animated: true, completion: nil)
...
