...
                        <constraint firstItem="TJO-Sd-vXx" firstAttribute="width" secondItem="tto-72-3t2" secondAttribute="width" id="Tfu-wY-WaB"/>
                        <constraint firstItem="6y2-sv-Nv1" firstAttribute="width" secondItem="GFT-Jg-wYz" secondAttribute="width" id="pgD-gF-ydL"/>
                    </constraints>
                </stackView>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="52F-ED-zAz">
                    <rect key="frame" x="243.66666666666663" y="726.33333333333337" width="75" height="27"/>
                    <accessibility key="accessibilityConfiguration" label="Ramdom"/>
                    <state key="normal" title="Ramdom"/>
                    <connections>
                        <action selector="onlcickRamdom:" destination="-1" eventType="touchUpInside" id="mvk-nB-Wwf"/>
                    </connections>
                </button>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="％" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RI8-Yx-ZgF">
...
